--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.26",
+    "mongoose-encryption": "^2.0.2",
     "path": "^0.12.7"
   },
   "devDependencies": {},
