--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "md5": "^2.2.1",
     "mongoose": "^5.9.26",
     "mongoose-encryption": "^2.0.2",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "passport-outlook": "^2.2.1",
     "path": "^0.12.7"
   },
   "devDependencies": {},
